[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "nslsolver"
version = "1.1.0"
description = "Official Python SDK for the NSLSolver captcha solving API"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.8"
authors = [
    {name = "NSLSolver", email = "support@nslsolver.com"},
]
keywords = ["captcha", "turnstile", "cloudflare", "kasada", "solver", "nslsolver"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Internet :: WWW/HTTP",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Typing :: Typed",
]
dependencies = [
    "requests>=2.25.0",
]

[project.optional-dependencies]
async = ["aiohttp>=3.8.0"]
dev = [
    "aiohttp>=3.8.0",
    "pytest>=7.0",
    "pytest-asyncio>=0.21",
    "mypy>=1.0",
    "ruff>=0.1.0",
]

[project.urls]
Homepage = "https://nslsolver.com"
Documentation = "https://docs.nslsolver.com"
Repository = "https://github.com/NSLSolver/NSLSolver-SDK-Python"
Issues = "https://github.com/NSLSolver/NSLSolver-SDK-Python/issues"

[tool.setuptools.packages.find]
include = ["nslsolver*"]

[tool.mypy]
strict = true
python_version = "3.8"

[tool.ruff]
target-version = "py38"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]
